samples/_failures_safe/1761659061_284494_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b5c27a9.c: In function ‘main’:
./samples/SAFE/__tmp_5b5c27a9.c:153:35: error: expected ‘)’ at end of input
  153 |     for (int i = 0; i < g.nodes; i
      |         ~                         ^
      |                                   )
./samples/SAFE/__tmp_5b5c27a9.c:153:5: error: expected declaration or statement at end of input
  153 |     for (int i = 0; i < g.nodes; i
      |     ^~~
